--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,10 @@ import org.gradle.internal.os.OperatingSystem
 plugins {
     // Apply the java-library plugin to add support for Java Library
     id 'java-library'
+    id("org.openjfx.javafxplugin") version "0.0.8"
 }
 
-ext.FRC_YEAR = "2019"
+ext.FRC_YEAR = "2022"
 
 
 repositories {
@@ -20,7 +21,8 @@ repositories {
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
     mavenCentral()
-    mavenLocal()
+    maven{ url "https://frcmaven.wpi.edu:443/artifactory/release" }
+    //mavenLocal()
 }
 
 
@@ -68,15 +70,29 @@ jar {
     }
 }
 
+javafx {
+    modules("javafx.controls", "javafx.fxml", "javafx.controls", "javafx.swing")
+    configuration = "compileOnly"
+}
+
+// configurations {
+//     javaFxDeps
+// }
+
+// configurations.compileOnly.extendsFrom(configurations.javaFxDeps)
+// configurations.testImplementation.extendsFrom(configurations.javaFxDeps)
 
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
-
+    
     // Installed FRC Shuffleboard jar.  Keep this so it knows how to resolve
     // the shuffleboard dependencies
     api getShuffleboardJar ()
 
+    compileOnly 'edu.wpi.first.shuffleboard:api:2020.+'
+    compileOnly 'edu.wpi.first.shuffleboard.plugin:networktables:2020.+'
+    
     // Han Solo Gauge library dependency
     // YOU MAY REMOVE THIS IF YOU ARE NOT USING THE Han Solo GAUGE LIBRARY
     compile 'eu.hansolo:Medusa:8.3'
